force-app/main/default/objects/ilms__User_Book__c/ilms__User_Book__c.object-meta.xml
<CustomObject>
    <description>User Books</description>
    <label>User Book</label>
    <nameField>
        <displayFormat>UB{00000}</displayFormat>
        <label>User Book Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>