force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Assigned__c.field-meta.xml
<CustomField>
    <fullName>ilms__Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>