force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Book__c.field-meta.xml
<CustomField>
    <fullName>ilms__Book__c</fullName>
    <label>Book</label>
    <referenceTo>ilms__Book__c</referenceTo>
    <relationshipLabel>User Books</relationshipLabel>
    <relationshipName>Book</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>