force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Chapters__c.field-meta.xml
<CustomField>
    <fullName>ilms__Chapters__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Chapters</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>