force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Community_Contact__c.field-meta.xml
<CustomField>
    <fullName>ilms__Community_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User Books</relationshipLabel>
    <relationshipName>User_Books</relationshipName>
    <type>Lookup</type>
</CustomField>