force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Completed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ilms__Completed_Percentage__c</fullName>
    <formula>IF( ISBLANK(ilms__Book__r.ilms__Pages_Count__c), 0, (ilms__Pages__c / ilms__Book__r.ilms__Pages_Count__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>