force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Course_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Course_Name__c</fullName>
    <formula>ilms__Book__r.ilms__Book_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>