force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Days_overdue__c.field-meta.xml
<CustomField>
    <fullName>ilms__Days_overdue__c</fullName>
    <formula>IF( (AND (NOT(ISNULL(ilms__Due_Date__c)),IF( (TODAY() &lt;= ilms__Due_Date__c),TRUE,FALSE) )), null,  (TODAY() - ilms__Due_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>