force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Days_to_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>ilms__Days_to_Assigned_Date__c</fullName>
    <formula>IF( (AND (NOT(ISNULL(ilms__Due_Date__c)),IF( (  ilms__Due_Date__c &lt;= TODAY()),TRUE,FALSE) )),0 , (ilms__Due_Date__c - TODAY()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Assigned Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>