force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ilms__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>