force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Enrolled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ilms__Enrolled_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled Date Time</label>
    <type>Date</type>
</CustomField>