force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Event__c.field-meta.xml
<CustomField>
    <fullName>ilms__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>ilms__Event__c</referenceTo>
    <relationshipName>User_Event</relationshipName>
    <type>Lookup</type>
</CustomField>