force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Liking__c.field-meta.xml
<CustomField>
    <fullName>ilms__Liking__c</fullName>
    <label>Liking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Like</fullName>
            </value>
            <value>
                <fullName>DisLike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>