force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Pages__c.field-meta.xml
<CustomField>
    <fullName>ilms__Pages__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pages</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>