force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Rating__c.field-meta.xml
<CustomField>
    <fullName>ilms__Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>