force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Session_Address__c.field-meta.xml
<CustomField>
    <fullName>ilms__Session_Address__c</fullName>
    <formula>ilms__Event__r.ilms__Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Address</label>
    <type>Text</type>
</CustomField>