force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Session_City__c.field-meta.xml
<CustomField>
    <fullName>ilms__Session_City__c</fullName>
    <formula>ilms__Event__r.ilms__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session City</label>
    <type>Text</type>
</CustomField>