force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Session_Country__c.field-meta.xml
<CustomField>
    <fullName>ilms__Session_Country__c</fullName>
    <formula>ilms__Event__r.ilms__Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Country</label>
    <type>Text</type>
</CustomField>