force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Session_Instructor__c.field-meta.xml
<CustomField>
    <fullName>ilms__Session_Instructor__c</fullName>
    <formula>ilms__Event__r.ilms__Instructor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Instructor</label>
    <type>Text</type>
</CustomField>