force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Session_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Session_Name__c</fullName>
    <formula>ilms__Event__r.ilms__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Name</label>
    <type>Text</type>
</CustomField>