force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Session_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ilms__Session_Start_Date_Time__c</fullName>
    <formula>ilms__Event__r.ilms__Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Start Date/Time</label>
    <type>DateTime</type>
</CustomField>