force-app/main/default/objects/ilms__User_Book__c/fields/ilms__Session_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ilms__Session_ZIP_Postal_Code__c</fullName>
    <formula>ilms__Event__r.ilms__ZIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session ZIP/Postal Code</label>
    <type>Text</type>
</CustomField>